--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="NetworkcoM - Chatbots con IA, Automatización RPA e Integraciones API para empresas en Argentina">
+    <meta name="keywords" content="chatbot, inteligencia artificial, automatización, RPA, API, Argentina">
     <title>NetworkcoM - Sistemas Inteligentes</title>
 </head>
 <body>
